--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer-security-senior-staff-principal-1390441/?gh_src=82a8057f1'>Site Reliability Engineer, Security (Senior/Staff/Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/site-reliability-engineer-security-senior-staff-principal-1390441/?gh_src=82a8057f1'>Site Reliability Engineer, Security (Senior/Staff/Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light">Buenos Aires, Argentina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999698463251-site-reliability-engineer-l3'>SG Digital Site Reliability Engineer L3 | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SGDigital/743999698463251-site-reliability-engineer-l3'>SG Digital Site Reliability Engineer L3 | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -146,7 +146,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finanzchef24.join.com/jobs/464422-site-reliability-engineer-devops-expert-m-w-d'>Job @ Finanzchef24 (Munich): Site Reliability Engi... | JOIN</a></h5> 
+<h5><a href='https://finanzchef24.join.com/jobs/464422-site-reliability-engineer-devops-expert-m-w-d'>Job @ Finanzchef24 (Munich): Site Reliability Engi... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich M?nchen</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -180,11 +180,11 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=navqlMwH'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=sIMG2hwY&__jvsc=Twitter&bid=navqlMwH'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://axosoft.breezy.hr/p/7fe0a4b78be7-site-reliability-engineer'>Site Reliability Engineer at Axosoft</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://axosoft.breezy.hr/p/7fe0a4b78be7-site-reliability-engineer'>Site Reliability Engineer at Axosoft</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -224,7 +224,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/amount/e0951968-1ee0-4355-bce1-b89ecf7a8969'>Amount - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amount/e0951968-1ee0-4355-bce1-b89ecf7a8969'>Amount - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -294,7 +294,7 @@ Clearance Required. California - San Francisco Virginia - Herndon?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/splunk/job/oB5lbfwW'>Splunk Careers - Site Reliability Engineer Intern (Summer 2020)</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -339,7 +339,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999697684365-principal-site-reliability-engineer'>Optimizely Principal Site Reliability Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999697684365-principal-site-reliability-engineer'>Optimizely Principal Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -402,7 +402,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<h5><a href='http://theorem.applytojob.com/apply/kxRe2aoddH/Experienced-Site-Reliability-Engineer-London'>Experienced Site Reliability Engineer ? London - Theorem, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://theorem.applytojob.com/apply/kxRe2aoddH/Experienced-Site-Reliability-Engineer-London'>Experienced Site Reliability Engineer ? London - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -426,7 +426,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/addepar1/jobs/4480912002'>Job Application for Senior Site Reliability Engineer at Addepar</a></h5> 
+<h5><a href='https://boards.greenhouse.io/addepar1/jobs/4480912002'>Job Application for Senior Site Reliability Engineer at Addepar</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As a SRE Engineer at Addepar, you will utilize your combination of significant 
 Linux experience, network knowledge, scripting abilities, information security and
